Fixed text overflow on cards

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -33,6 +33,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 90%;
 }
 
 .card__content {
@@ -41,7 +42,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 627px) and (min-width: 320px) {
+@media screen and (max-width: 627px) {
   .card {
     width: 288px;
   }
@@ -54,7 +55,7 @@
     line-height: 1;
   }
   .card__like-button {
-    width: 20;
+    width: 20px;
     height: 18px;
   }
 }
