--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -14,7 +14,7 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 627px) and (min-width: 320px) {
+@media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
     row-gap: 20px;
