--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -79,7 +79,7 @@
   height: 12px;
 }
 
-@media screen and (max-width: 627px) and (min-width: 320px) {
+@media screen and (max-width: 627px) {
   .profile {
     flex-direction: column;
     align-items: center;
